fixed rotating cards on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -168,20 +168,16 @@ body {
 
 /* Small screens */
 @media only screen and (max-width: 640px) {
-  .Pizzacontainer {
-  }
-
   .Cards {
     width: 300px;
     height: 300px;
+    margin-bottom: 40px;
   }
 
   .Card {
     width: 100%;
     height: 100%;
-
     text-align: center;
-    position: relative;
     transform: scale(1);
     transition: transform 0.8s;
     transform-style: preserve-3d;
